--- a/Logi/src/main/AndroidManifest.xml
+++ b/Logi/src/main/AndroidManifest.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <application>
+        <provider
+            android:name=".initializers.LoggerProvider"
+            android:authorities="${applicationId}.LoggerProvider"
+            android:exported="false"
+            android:enabled="true"/>
+    </application>
 </manifest>
