Manifest alignment with new activity name

--- a/LogiUI/src/main/AndroidManifest.xml
+++ b/LogiUI/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.LocalLogger"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".ActivityBase"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
